--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -7,11 +7,11 @@ Home Page
 {% block content %}
 <ul>
     <li><a href="{% url 'books' %}">Books</a></li>
-    <li><a href="{% url 'add_book' %}">Add books</a></li>
+    {% comment %} <li><a href="{% url 'add_book' %}">Add books</a></li> {% endcomment %}
     <li><a href="{% url 'friends' %}">Friends</a></li>
-    <li><a href="{% url 'add_friend' %}">Add friends</a></li>
+    {% comment %} <li><a href="{% url 'add_friend' %}">Add friends</a></li> {% endcomment %}
     <li><a href="{% url 'borrows' %}">Borrows</a></li>
-    <li><a href="{% url 'borrow_book' %}">Borrow a book</a></li>
+    {% comment %} <li><a href="{% url 'borrow_book' %}">Borrow a book</a></li> {% endcomment %}
     
 </ul>
 {% endblock %}
